@@ -1,2 +1,2 @@
 const char *mversion="3.9.8";
-const char *mdate = "05 November 2002";
+const char *mdate = "16 November 2002";
